--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>com.twilio.sdk</groupId>
             <artifactId>twilio</artifactId>
-            <version>(7.11.0,7.12.0]</version>
+            <version>7.16.0</version>
         </dependency>
     </dependencies>
 
