--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,28 @@
             <version>1.2.3</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+         <dependency>
+             <groupId>org.glassfish.jersey.core</groupId>
+             <artifactId>jersey-client</artifactId>
+             <version>2.8</version>
+         </dependency>
+         <dependency>
+             <groupId>org.glassfish.jersey.media</groupId>
+             <artifactId>jersey-media-json-jackson</artifactId>
+             <version>2.8</version>
+         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp/okhttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
     </dependencies>
 
 
