--- a/options.ini
+++ b/options.ini
@@ -5,3 +5,10 @@ password=rootmobi
 webserver=localhost
 port=4444
 marketfee=5
+generatesale=https://preprod.paymeservice.com/api/generate-sale
+createseller=https://preprod.paymeservice.com/api/create-seller
+refundsale=https://preprod.paymeservice.com/api/refund-sale
+salecallback=http://www.example.com/payment/callback
+successfullurl=http://www.example.com/payment/success
+paymeclient=mobicar_KIWAanOH
+capturesale=https://preprod.paymeservice.com/api/capture-sale
