--- a/options.ini
+++ b/options.ini
@@ -12,3 +12,4 @@ salecallback=http://www.example.com/payment/callback
 successfullurl=http://www.example.com/payment/success
 paymeclient=mobicar_KIWAanOH
 capturesale=https://preprod.paymeservice.com/api/capture-sale
+insertseller=http://34.199.251.216:8000/insertseller.php
